plugins {
    alias(libs.plugins.android.application)
    id 'com.google.gms.google-services'
    id('com.google.dagger.hilt.android')
}

android {
    namespace 'cr.ac.itcr.zsnails.pureharvest'
    compileSdk 35

    buildFeatures {
        viewBinding = true
    }

    viewBinding {
        enabled = true
    }

    defaultConfig {
        applicationId "cr.ac.itcr.zsnails.pureharvest"
        minSdk 24
        targetSdk 35
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        javaCompileOptions {
            it.annotationProcessorOptions {
                it.arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

dependencies {
    implementation libs.hilt.android
    implementation libs.constraintlayout
    implementation libs.navigation.fragment
    implementation libs.activity
    implementation libs.navigation.ui
    implementation libs.legacy.support.v4
    implementation libs.lifecycle.livedata.ktx
    implementation libs.lifecycle.viewmodel.ktx
    implementation libs.room.runtime

    annotationProcessor libs.room.compiler
    annotationProcessor libs.hilt.compiler

    implementation libs.firebase.firestore
    implementation libs.firebase.storage
    implementation libs.firebase.auth
    implementation platform(libs.firebase.bom)
    implementation libs.firebase.analytics

    implementation libs.appcompat
    implementation libs.material
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core

    implementation libs.glide
    annotationProcessor libs.compiler
    implementation libs.androidx.lifecycle.viewmodel
    implementation libs.androidx.lifecycle.livedata

}
